# project2_mmunoria

./: .gitignore  README.md
src/gimbal_lock/: package.xml  setup.cfg  setup.py
src/gimbal_lock/gimbal_lock/: euler_to_joint_node.py
src/gimbal_lock/launch/: gimbal.launch.py
src/gimbal_lock/urdf/: gimbalrobot.urdf.xacro
src/gimbal_lock_demo/: package.xml  plugin.xml  setup.cfg  setup.py
src/gimbal_lock_demo/gimbal_lock_demo/: euler_to_joint_node.py
src/gimbal_lock_demo/launch/: demo.launch.py
urdf/: robot.urdf.xacro
